name:                inferno
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Noam Lewis
maintainer:          jones.noamle@gmail.com
copyright:           Noam Lewis, 2014
-- category:
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


flag quickcheck
  default: False
  manual: True

flag trace
  default: False
  manual: True

library
  hs-source-dirs:      src
  exposed-modules:     Inferno.Infer
                     , Inferno.Parse
                     , Inferno.Util
                     , Inferno.Pretty
                     , Inferno.Types
                     , Inferno.Fix
                     , Inferno.Unify
                     , Inferno.InferState
                     , Inferno.Log
                     , Inferno.Lib
                     , Inferno.Builtins
                     , Inferno.BuiltinArray
                     , Inferno.BuiltinRegex
                     , Inferno.Decycle
  -- TODO: use only mtl (not transformers)
  build-depends:       base, mtl, containers, transformers, either, language-ecmascript, digits, parsec
  default-language:    Haskell2010
  ghc-options: -Wall -O2 -rtsopts -threaded
  if flag(trace)
    cpp-options: -DTRACE
  if flag(quickcheck)
    cpp-options: -DQUICKCHECK
    build-depends: QuickCheck, derive
    default-extensions: TemplateHaskell, DeriveGeneric, FlexibleInstances

executable inferno
  main-is: Main.hs
  build-depends:       base, parsec, inferno
  default-language:    Haskell2010
  ghc-options: -Wall -O2 -rtsopts -threaded
  if flag(trace)
    cpp-options: -DTRACE
  if flag(quickcheck)
    cpp-options: -DQUICKCHECK
    build-depends: QuickCheck, derive
    default-extensions: TemplateHaskell, DeriveGeneric

executable inferno-demo
  main-is: Demo.hs
  hs-source-dirs: test
  build-depends:       base, inferno
  default-language:    Haskell2010
  ghc-options: -Wall  -O2 -main-is Demo
  if flag(trace)
    cpp-options: -DTRACE
  if flag(quickcheck)
    cpp-options: -DQUICKCHECK
    build-depends: QuickCheck, derive
    default-extensions: TemplateHaskell, DeriveGeneric

executable test
  if flag(quickcheck)
    cpp-options: -DQUICKCHECK
    build-depends: QuickCheck, derive
    default-extensions: TemplateHaskell, DeriveGeneric
  else
    buildable: False
  main-is: Test.hs
  hs-source-dirs: test
  build-depends:       base, inferno
  default-language:    Haskell2010
  ghc-options: -Wall  -O2 -main-is Test
  if flag(trace)
    cpp-options: -DTRACE
