name:                infernu
version:             0.1.0.0
-- synopsis:
-- description:
-- license:
license-file:        LICENSE
author:              Noam Lewis
maintainer:          jones.noamle@gmail.com
copyright:           Noam Lewis, 2014
-- category:
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


flag quickcheck
  default: False
  manual: True

flag trace
  default: False
  manual: True

library
  hs-source-dirs:      src
  exposed-modules:     Infernu.Infer
                     , Infernu.Parse
                     , Infernu.Util
                     , Infernu.Pred
                     , Infernu.Pretty
                     , Infernu.Types
                     , Infernu.Fix
                     , Infernu.Unify
                     , Infernu.InferState
                     , Infernu.Log
                     , Infernu.Lib
                     , Infernu.Builtins
                     , Infernu.BuiltinArray
                     , Infernu.BuiltinRegex
                     , Infernu.Decycle
  -- TODO: use only mtl (not transformers)
  build-depends:       base, mtl, containers, transformers, either, language-ecmascript, digits, parsec
  default-language:    Haskell2010
  ghc-options: -Wall -O2 -rtsopts -threaded
  if flag(trace)
    cpp-options: -DTRACE
  if flag(quickcheck)
    cpp-options: -DQUICKCHECK
    build-depends: QuickCheck, derive
    default-extensions: TemplateHaskell, DeriveGeneric, FlexibleInstances

executable infernu
  main-is: Main.hs
  build-depends:       base, parsec, infernu
  default-language:    Haskell2010
  ghc-options: -Wall -O2 -rtsopts -threaded
  if flag(trace)
    cpp-options: -DTRACE
  if flag(quickcheck)
    cpp-options: -DQUICKCHECK
    build-depends: QuickCheck, derive
    default-extensions: TemplateHaskell, DeriveGeneric

executable infernu-demo
  main-is: Demo.hs
  hs-source-dirs: test
  build-depends:       base, infernu
  default-language:    Haskell2010
  ghc-options: -Wall  -O2 -main-is Demo
  if flag(trace)
    cpp-options: -DTRACE
  if flag(quickcheck)
    cpp-options: -DQUICKCHECK
    build-depends: QuickCheck, derive
    default-extensions: TemplateHaskell, DeriveGeneric

executable test
  if flag(quickcheck)
    cpp-options: -DQUICKCHECK
    build-depends: QuickCheck, derive
    default-extensions: TemplateHaskell, DeriveGeneric
  else
    buildable: False
  main-is: Test.hs
  hs-source-dirs: test
  build-depends:       base, infernu
  default-language:    Haskell2010
  ghc-options: -Wall  -O2 -main-is Test
  if flag(trace)
    cpp-options: -DTRACE
