name:                jss
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              Noam Lewis
maintainer:          jones.noamle@gmail.com
copyright:           Noam Lewis, 2014
-- category:            
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


flag quickcheck
  default: False
  manual: True

flag trace
  default: False
  manual: True

library
  exposed-modules:     Infer, Parse
  build-depends:       base >=4.7 && <4.8, mtl, containers, transformers, either, language-ecmascript, digits, parsec
  default-language:    Haskell2010
  ghc-options: -Wall

executable sjs-demo
  main-is: Demo.hs
  build-depends:       base >=4.7 && <4.8, mtl, containers, transformers, either, language-ecmascript, digits, parsec
  default-language:    Haskell2010
  ghc-options: -Wall -main-is Demo

executable sjs
  main-is: Main.hs
  build-depends:       base >=4.7 && <4.8, mtl, containers, transformers, either, language-ecmascript, digits, parsec
  default-language:    Haskell2010
  ghc-options: -Wall

executable test
  main-is: Test.hs
  build-depends:       base >=4.7 && <4.8, mtl, containers, transformers, either, language-ecmascript, digits, parsec
  default-language:    Haskell2010
  ghc-options: -Wall -main-is Test
  if flag(quickcheck)
    cpp-options: -DQUICKCHECK
    build-depends: QuickCheck, derive
    default-extensions: TemplateHaskell, DeriveGeneric
  if flag(trace)
    cpp-options: -DTRACE

-- executable sjs-test
--   main-is: Main.hs
--   other-extensions:    DeriveGeneric
--   build-depends:       base >=4.7 && <4.8, GenericPretty, mtl, containers, language-ecmascript, errors, either, transformers, QuickCheck, derive, test-framework-th, test-framework-quickcheck2, derive
--   hs-source-dirs:      ., test
--   default-language:    Haskell2010
--   ghc-options: -Wall

