name:                sjs
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              Noam Lewis
maintainer:          jones.noamle@gmail.com
copyright:           Noam Lewis, 2014
-- category:            
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10


flag quickcheck
  default: False
  manual: True

flag trace
  default: False
  manual: True

library
  hs-source-dirs:      src
  exposed-modules:     SafeJS.Infer, SafeJS.Parse, SafeJS.Util, SafeJS.Pretty, SafeJS.Types
  -- TODO: use only mtl (not transformers)
  build-depends:       base, mtl, containers, transformers, either, language-ecmascript, digits, parsec
  default-language:    Haskell2010
  ghc-options: -Wall
  if flag(trace)
    cpp-options: -DTRACE

executable sjs
  main-is: Main.hs
  build-depends:       base, parsec, sjs
  default-language:    Haskell2010
  ghc-options: -Wall
  if flag(trace)
    cpp-options: -DTRACE

executable sjs-demo
  main-is: Demo.hs
  hs-source-dirs: test
  build-depends:       base, sjs
  default-language:    Haskell2010
  ghc-options: -Wall -main-is Demo
  if flag(trace)
    cpp-options: -DTRACE

executable test
  if flag(quickcheck)
    cpp-options: -DQUICKCHECK
    build-depends: QuickCheck, derive
    default-extensions: TemplateHaskell, DeriveGeneric
  else
    buildable: False
  main-is: Test.hs
  hs-source-dirs: test
  build-depends:       base, sjs
  default-language:    Haskell2010
  ghc-options: -Wall -main-is Test
  if flag(trace)
    cpp-options: -DTRACE

